:version-label: Unconfirmed
:copyright: Unlicense
:experimental:
:hide-uri-scheme:
:icons: font
:source-highlighter: highlight.js
:sectnums!:
:toc: left
:sectanchors:

== History

:leveloffset: +2

= 0.4.0-dev (2025 Xxx xx)
:revnumber: 0.4.0
:revdate: 2025-XX-XX

* *update*: `Where` can handle basic strings and key => value arrays.
* *update*: `AbstractTable` supports `Where` objects.

:leveloffset!:
:leveloffset: +2

= 0.3.0-dev (2025 Nov 20)
:revnumber: 0.3.0
:revdate: 2025-11-20

* update: `AbstractEntity::save` added optional parameter *bool* `insert` for non-automatic primary id fields.
* update: `AbstractEntity` `JSONable`.
* update: `AbstractTable` fetch single entity by id returns result correctly.
* new: `AbstractTable::insertUpdate` uses `insert on conflict update syntax`.
* new: `EntityPrepareMethod` method attribute indicates method to call pre db persistence.
* new: `QueryBuilders*` are now `Stringable`.
* new: `Drivers::getQueryBuilder` methoded added to quickly get to a builder.
* new: `AbbstractTable::getQueryBuilder` methoded added to quickly get to a builder.
* update: moved to documentation to the new structure.
* update: `OptionsInterface` used throughout.
* fix: `QueryBuilders` error with null where clauses.

:leveloffset!:
:leveloffset: +2

= 0.2.0 (2025 Apr 25)
:author: Philip Michael Raab
:email: <philip@cathedral.co.za>
:description: Some helpers for database task and query construction.
:keywords: inanepain, db, database, sql, query, builder, MySQL, PostgresSQL
:revnumber: 0.2.0
:revdate: 2025-04-25
:copyright: Unlicense
:experimental:
:hide-uri-scheme:
:icons: font
:source-highlighter: highlight.js
:sectnums!:
:toc: auto
:sectanchors:

* new: DB-Layer for database access initial basic release

:leveloffset!:
:leveloffset: +2

= 0.1.0 (2022 Jul 22)
:author: Philip Michael Raab
:email: <philip@cathedral.co.za>
:description: Some helpers for database task and query construction.