@@ -4,3 +4,4 @@
 
 * *update*: `Where` can handle basic strings and key => value arrays.
 * *update*: `AbstractTable` supports `Where` objects.
+* *new*: Added support to get a prepared statement with placeholders that can be executed with `key` => `value` data.
